--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="page">
-            <input type="text" name="sin" id="sin" placeholder="Enter your thoughts.">
+            <input type="text" name="sin" id="sin" placeholder="Enter your thoughts." autocomplete="off">
         </div>
     </div>
     <div class="icn">
